Add use virtual threads